--- a/estilo.css
+++ b/estilo.css
@@ -57,3 +57,22 @@ footer{
     display: block;
     font-size: 2.5rem;
   }
+
+
+  /*product_card*/
+.product_card {max-width: 288px;margin:44px auto 0;text-align: center;position: relative}
+.image_box {background: rgb(255, 228, 196);display: -webkit-flex;display: -moz-flex;display: -ms-flex;display: -o-flex;display: flex;align-items:center;justify-content: center; }
+.bottom_box {border-left: 1px solid #dcdcdc;border-right: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc;}
+.price_title {font-family: 'Gotham Narrow Book';font-size: 18.67px;padding-top: 28px;color: #2b334c;}
+.prices_box {display: -webkit-flex;display: -moz-flex;display: -ms-flex;display: -o-flex;display: flex;justify-content: center;align-content: center;margin-top: 7px;font-family: 'Gotham Narrow Book';}
+.price {color: #2b334c;font-size: 18.67px;margin-left: 5px;}
+.product_card__text {font-size: 16px;font-family: 'Roboto';font-weight: 300;color: #404040;padding: 0 35px;margin-top: 20px;}
+.product_card__button {max-width: 131px;height: 44px;line-height: 44px;border-radius: 4px;background: #f0123e;font-size: 16px;text-transform: uppercase;font-family: 'Gotham Narrow';font-weight: 500;color: #fff;display: block;margin:25px auto;transition: all .6s ease;}
+.product_card__button:hover {transform: scale(.9);color: #fff;}
+
+/*First screen*/
+.first_screen .container {background: rgb(255, 228, 196);padding-bottom: 56px;}
+.second_title {font-size: 50.67px;font-family: 'Gotham Narrow';font-weight: 500;color: #000;margin-top: 50px;}
+.second_title__description {font-size: 18.67px;color: #969696;padding: 0 20px;margin-top: 30px;}
+
+.button {height: 58px;width: 100%;max-width: 330px;font-size: 22.67px;text-transform: uppercase;margin:19px auto 0;background: #f0123e;border-radius: 4px;display: block;line-height: 58px;color: #fff;transition: all .6s ease;}
